# matchmakeo

./: .gitignore  .pa11yci.json  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  examples.py  index.html  objects.inv  properdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
autoapi/matchmakeo/: index.html
autoapi/matchmakeo/catalogues/: index.html
autoapi/matchmakeo/databases/: index.html
autoapi/matchmakeo/field/: index.html
autoapi/matchmakeo/product/: index.html
autoapi/matchmakeo/queryset/: index.html
autoapi/matchmakeo/utils/: index.html
autoapi/summary/: index.html
catalogues/: index.html
contributing/: index.html
databases/: index.html
docs/: catalogues.md  databases.md  downloading.md  getting-started.md  installation.md  querying.md  roadmap.md  visualisation.md
downloading/: index.html
downloading-footprints/: index.html
getting-started/: index.html
installation/: index.html
license/: index.html
metadata-catalogues/: index.html
querying/: index.html
roadmap/: index.html
search/: search_index.json
src/matchmakeo/: __init__.py  catalogues.py  databases.py  product.py  query.py  queryset.py  utils.py
stylesheets/: extra.css
tests/: conftest.py  test_catalogues.py  test_databases.py  test_downloads.py  test_product.py  test_query.py  test_utils.py
tests/fixtures/: dummy_product_a.json  dummy_product_b.json  earthengine_results.json  gportal_products.json  nasa_cmr_results.json
visualisation/: index.html
