[project]
authors = [
    {name = "David Wyld", email = "dalby@bas.ac.uk"},
    {name = "Tom Kelly", email = "thokel@bas.ac.uk"},
]
name = "matchmakeo"
license = { file = "LICENSE" }
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "requests>=2.32.3,<3",
    "sqlalchemy>=2",
    "geoalchemy2>=0.18.0,<0.19",
    "geopandas>=1.1.1,<2",
    "tqdm>=4.67.1",
    "shapely>=2.1.1",
    "psycopg[binary]>=3.2.9",
]

[project.urls]
Homepage = "https://github.com/bas-quasar/matchmakeo"
Repository = "https://github.com/bas-quasar/matchmakeo.git"
Issues = "https://github.com/bas-quasar/matchmakeo/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.optional-dependencies]
earthengine = ["earthengine-api"]
postgis = [
    "psycopg[binary]>3",
]
spatialite = ["spatialite"]
gportal = [
    "gportal>=0.4.0",
]

[dependency-groups]
docs = [
    "mkdocs-autoapi[python]>=0.4.1",
    "mkdocs-include-markdown-plugin>=7.3.0",
    "mkdocs-materialx>=10.1.6",
    "properdocs>=1.6.7",
    "properdocs-theme-readthedocs>=1.6.5",
]
test = [
    "pytest",
    "pytest-databases>=0.14.0",
]
lint = [
    "pre-commit>=4.3.0",
    "ruff",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

