[project]
authors = [
    {name = "David Wyld", email = "dalby@bas.ac.uk"},
    {name = "Tom Kelly", email = "thokel@bas.ac.uk"},
]
name = "matchmakeo"
license = { file = "LICENSE" }
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = [
    "requests>=2.32.3,<3",
    "sqlalchemy>=2",
    "geoalchemy2",
    "geopandas",
    "tqdm",
    "shapely",
    "psycopg[binary]>=3",
]

[project.urls]
Homepage = "https://github.com/bas-quasar/matchmakeo"
Repository = "https://github.com/bas-quasar/matchmakeo.git"
Issues = "https://github.com/bas-quasar/matchmakeo/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project.optional-dependencies]
earthengine = ["earthengine-api"]
postgis = [
    "psycopg[binary]>3",
]
spatialite = ["spatialite"]
gportal = [
    "gportal",
]

[dependency-groups]
docs = [
    "mkdocs-autoapi[python]",
    "mkdocs-include-markdown-plugin",
    "mkdocs-materialx",
    "mkdocs-mermaid2-plugin",
    "properdocs",
    "properdocs-theme-readthedocs",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-databases[postgres]",
    "pytest-skip-slow",
    "requests-mock",
]
lint = [
    "pre-commit",
    "ruff",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
    "hatch",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

